--- a/Bank/Views/Shared/_Layout.cshtml
+++ b/Bank/Views/Shared/_Layout.cshtml
@@ -20,9 +20,9 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Account", "Index", "Accounts")</li>
+                    <li>@Html.ActionLink("Deposit", "Index", "Deposits")</li>
+                    <li>@Html.ActionLink("Transfer", "Index", "Transfers")</li>
                 </ul>
             </div>
         </div>
